# bzlmodgotest

./: BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum  main.go
proto/: BUILD.bazel  test.proto
